--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "license": "(MIT AND Apache-2.0)",
     "author": "Dylan Vann <dylan@dylanvann.com> (https://dylanvann.com)",
-    "main": "dist/index.cjs.js",
+    "main": "src/index.js",
     "module": "dist/index.js",
     "typings": "dist/index.d.ts",
     "files": [
